deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-deployment
spec:
  replicas: 1 # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: engineers-ui
  template:
    metadata:
      labels:
        app: engineers-ui
    spec:
      containers:
        - name: engineers-ui
          image: steven8519/engineers-ui:latest # Replace with your Docker image
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: engineers-ui
spec:
  selector:
    app: engineers-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
